devel
-----

* Data definition reconsiliation in cluster has been modified
  extensively to greatly accelerate the creation of 1000s of
  databases through following means:
  - AgencyCache offers change sets API based on Raft index.
  - ClusterInfo caches are only updated using change sets.
  - Maintenance uses local as well as agency change sets to limit
    the scope of every runtime to these change sets.

* Make scheduler react and start new threads slightly faster in case a lot
  of new work arrives.

* Make scheduler propertly count down the number of working threads in case
  an exception happens in a worker thread.

* Added startup option `--database.old-system-collections` to toggle automatic
  creation of system collections `_modules` and `_fishbowl`, along with their
  internal usage. These collections are useful only in very few case, so it
  is normally not worth to create them in all databases.
  The `_modules` collection is only used to register custom JavaScript modules,
  for which there exists no API, and `_fishbowl` is used to store the temporary
  list of Foxx apps retrieved from the Github Foxx store.
  If the option value is `false` (which is the default from v3.8 onwards), the
  two collections will not be created for any new database. The `_fishbowl`
  collection will still be created dynamically when needed. If the option value
  is `true`, the collections will be created regularly as before.
  The option will also be introduced to v3.7, where it will have a default
  value of `true`, meaning the collections will still be created there.

  Any functionality related to the `_modules` system collection is deprecated
  and will be removed in ArangoDB v3.9.

  Two side effects of turning this option off (which is the default) are:
  * there will no be iteration over all databases at server startup just to check
    the contents of all `_modules` collections.
  * less collections/shards will be around for deployments that create a large