@@ -173,12 +173,14 @@ class RocksDBReplicationContext {
   // iterates over at most 'limit' documents in the collection specified,
   // creating a new iterator if one does not exist for this collection
   DumpResult dumpJson(TRI_vocbase_t& vocbase, std::string const& cname,
-                      basics::StringBuffer&, uint64_t chunkSize);
+                      basics::StringBuffer&, uint64_t chunkSize,
+                      bool useEnvelope);
 
   // iterates over at most 'limit' documents in the collection specified,
   // creating a new iterator if one does not exist for this collection
   DumpResult dumpVPack(TRI_vocbase_t& vocbase, std::string const& cname,
-                       velocypack::Buffer<uint8_t>& buffer, uint64_t chunkSize);
+                       velocypack::Buffer<uint8_t>& buffer, uint64_t chunkSize,
+                       bool useEnvelope);
 
   // ==================== Incremental Sync ===========================
 
